# agentic-taf

./: .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Dockerfile  Jenkinsfile  README.md  build.py  docker-compose.yml  pyproject.toml  sonar-project.properties
docs/: architecture.md  (+1 more)
src/main/python/: requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/main/python/taf/: __init__.py  taf.py
src/main/python/taf/foundation/: __init__.py  servicelocator.py
src/main/python/taf/foundation/api/chaos/: client.py
src/main/python/taf/foundation/api/cli/: __init__.py  client.py
src/main/python/taf/foundation/api/llm/: client.py
src/main/python/taf/foundation/api/plugins/: __init__.py  baseplugin.py  chaosplugin.py  cliplugin.py  llmplugin.py  mobileplugin.py  restplugin.py  webplugin.py  wsplugin.py
src/main/python/taf/foundation/api/svc/REST/: __init__.py  client.py
src/main/python/taf/foundation/api/ui/: __init__.py  aut.py  uielement.py
src/main/python/taf/foundation/api/ui/controls/: __init__.py  button.py  checkbox.py  combobox.py  edit.py  frame.py  link.py  listitem.py  radiogroup.py  table.py  text.py
src/main/python/taf/foundation/api/ui/patterns/: __init__.py  basepattern.py  container.py  expandcollapse.py  grid.py  invoke.py  selection.py  selectionitem.py  table.py  text.py  toggle.py  value.py
src/main/python/taf/foundation/api/ui/support/: __init__.py  elementfinder.py  locator.py  waithandler.py
src/main/python/taf/foundation/api/ui/web/: __init__.py  browser.py  page.py  webelement.py
src/main/python/taf/foundation/api/ws/: client.py
src/main/python/taf/foundation/conf/: __init__.py  config.yml  configuration.py
src/main/python/taf/foundation/plugins/chaos/k8s/: __init__.py  faults.py  k8schaosclient.py  k8schaosplugin.py  probes.py
src/main/python/taf/foundation/plugins/cli/paramiko/: __init__.py  paramikoplugin.py  sshclient.py
src/main/python/taf/foundation/plugins/llm/judge/: __init__.py  llmclient.py  llmjudgeplugin.py
src/main/python/taf/foundation/plugins/svc/httpx/: __init__.py  httpclient.py  httpxrestplugin.py
src/main/python/taf/foundation/plugins/svc/requests/: __init__.py  requestsrestplugin.py  restclient.py
src/main/python/taf/foundation/utils/: __init__.py  connectioncache.py  logger.py  yamldata.py
src/main/python/taf/foundation/utils/traits/: __init__.py  serializable.py
src/main/python/taf/modeling/chaos/: __init__.py  chaosrunner.py
src/main/python/taf/modeling/cli/: __init__.py  clirunner.py
src/main/python/taf/modeling/llm/: __init__.py  llmjudge.py
src/main/python/taf/modeling/svc/: __init__.py  restclient.py
src/main/python/taf/modeling/web/: __init__.py  browser.py
src/main/python/taf/modeling/web/controls/: __init__.py  webbutton.py  webcheckbox.py  webcombobox.py  webframe.py  weblabel.py  weblink.py  webradiogroup.py  webtable.py  webtextbox.py
src/main/python/taf/modeling/ws/: __init__.py  wsclient.py
(+107 files in other folders)
