[metadata]
author = Wesley Peng
author_email = wesley.peng@live.com

license = LGPL-3.0
url = https://github.com/WesleyPeng/agentic-taf
platforms = posix
classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[options]
include_package_data = True
python_requires = >=3.12

[bdist_wheel]
plat-name = any
